<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ryan.cricketcounter.Counter">

    <TextView
        android:id="@+id/headerText"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/header"
        android:textSize="20sp"
        />

    <Button
        android:layout_alignParentRight="true"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:onClick="resetMatch"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/resetText"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerText"
        android:layout_margin="14dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/teamAText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="2dp"
                android:text="@string/teamATitle"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/scoreTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teamAText"
                android:layout_centerHorizontal="true"
                android:padding="35dp"
                android:text="0"
                android:textSize="35dp"/>


            <Button

                android:id="@+id/Fourer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scoreTeamA"
                android:layout_centerHorizontal="true"
                android:onClick="fourer"
                android:text="@string/fourerText" />

            <Button
                android:id="@+id/Sixer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/Fourer"
                android:onClick="sixer"
                android:layout_marginTop="55dp"
                android:layout_marginRight="5dp"
                android:text="@string/sixerText" />

            <Button
                android:id="@+id/Run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/Fourer"
                android:onClick="run"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="5dp"
                android:text="@string/Run" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/teamBText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="2dp"
                android:layout_marginTop="4dp"
                android:text="@string/teamBTitle"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/scoreTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teamBText"
                android:layout_centerHorizontal="true"
                android:padding="35dp"
                android:text="0"
                android:textSize="35sp"/>


            <Button
                android:id="@+id/FourerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scoreTeamB"
                android:layout_centerHorizontal="true"
                android:onClick="fourerB"
                android:text="@string/fourerText" />

            <Button
                android:id="@+id/SixerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/FourerB"
                android:onClick="sixerB"
                android:layout_marginTop="55dp"
                android:layout_marginRight="5dp"
                android:text="@string/sixerText" />

            <Button
                android:id="@+id/RunB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/FourerB"
                android:onClick="runB"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="5dp"
                android:text="@string/Run" />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
